[package]
name = "libpylon"
description = "Core library for the Pylon suite of apps"
authors = ["Nikhil Prabhu <nikhilprabhu98@gmail.com"]
license = "GPL-3.0"
repository = "https://github.com/pylon-apps/libpylon"
documentation = "https://docs.rs/libpylon"
version = "0.11.0"
edition = "2021"
rust-version = "1.63.0"

[badges.maintenance]
status = "experimental"

[dependencies]
derive_builder = "0.12.0"
magic-wormhole = "0.6.0"
serde = "1.0.152"
smol = "1.3.0"
thiserror = "1.0.38"
url = "2.3.1"
